--- a/hover.html
+++ b/hover.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>hover</title>
+    <title>new title</title>
     <link rel="stylesheet" href="sassPractice.css">
     <style>
         @media (min-width: 750px) {
