--- a/hello.html
+++ b/hello.html
@@ -13,11 +13,16 @@
             margin: 20px;
             border-radius: 10px;
         }
+
+        #foo {
+            color: blue;
+        }
     </style>
 </head>
 
 <body>
     <h1>Welcome to my webpage, this is edited from git interface</h1>
+    <h1 id="foo">Welcome to my webpage, this iedited from git interface</h1>
     <h1>This is a smaller heading</h2>
         An ordered list:
         <ol>
